--- a/webroot/mobile/html/404.html
+++ b/webroot/mobile/html/404.html
@@ -25,7 +25,8 @@
             </div>
             <p class="ptips">可能原因：网络信号弱，<em>找不到请求页面</em></p>
             <div class='btnlist'>
-                <a href="#this"><i></i>刷新</a><a href="#this"><i></i>主页</a><a href="#this"><i></i>返回</a>
+                <!--<a href="#this"><i></i>刷新</a>-->
+                <a href="#this"><i></i>主页</a><a href="#this"><i></i>返回</a>
             </div>
         </div>
     </body>
