--- a/webroot/mobile/html/activity-enroll.html
+++ b/webroot/mobile/html/activity-enroll.html
@@ -28,7 +28,7 @@
 				
 			</div>
 			<div class="infobox sing-up">
-				<ul>
+				<ul class="outerul">
 					<li>活动名称：<span class='infocard'><input type="text" placeholder="2016中国国际体育投融资总裁年会" /></span></li>
 					<li>时间：<span class='infocard'><input type="text" placeholder="2016年4月28日-2016年4月30日" /></span></li>
 					<li>地点：<span class='infocard'><input type="text" placeholder="深圳市福田区东海国际公寓" /></span></li>
@@ -39,7 +39,14 @@
 					<li>费用：<span class='infocard reg-repass'><input type="text" placeholder="400元" /></span></li>
 				</ul>
 			</div>
-			<a href="booking-success.html" class="nextstep">提交</a>
+			<div class="infobox sing-up mt20">
+				<div class="choose_cooper flex flex_jusitify">
+					<div>选择同行人</div>
+					<div><span>请选择</span> <i class="iconfont">&#xe667;</i></div>
+				</div>
+			</div>
+				<div class='line fixedbottm' ><span class="mistips">我们会在三个工作日内处理您的申请</span></div>
+				<a href="booking-success.html" class="f-bottom">提交</a>
 		</div>
 	
 	</body>
