--- a/webroot/mobile/html/activity-enroll_more2.html
+++ b/webroot/mobile/html/activity-enroll_more2.html
@@ -52,10 +52,10 @@
 							<div class='r-info'><i class="iconfont">&#xe67b;</i></div>
 						</div>
 						<div class="chooseplace-otherinfo flex box_start">
-							<span class="l-info">公&nbsp;&nbsp;&nbsp;&nbsp;司</span> <div class="r-info">深圳市柠檬智慧咨询管理有限公司深圳市柠檬智慧咨询管理有限公司</div>
+							<span class="l-info">公 司</span> <div class="r-info">深圳市柠檬智慧咨询管理有限公司深圳市柠檬智慧咨询管理有限公司</div>
 						</div>
 						<div class="chooseplace-otherinfo">
-							<span class="l-info">手机号</span> <span>15013797562</span>
+							<span class="l-info">手 机</span> <span>15013797562</span>
 						</div>
 					</li>
 					<li class="choosed-box-items">
@@ -64,10 +64,10 @@
 							<div class='r-info'><i class="iconfont">&#xe67b;</i></div>
 						</div>
 						<div class="chooseplace-otherinfo flex box_start">
-							<span class="l-info">公&nbsp;&nbsp;&nbsp;&nbsp;司</span> <div class="r-info">深圳市柠檬智慧咨询管理有限公司深圳市柠檬智慧咨询管理有限公司深圳市柠檬智慧咨询管理有限公司深圳市柠檬智慧咨询管理有限公司</div>
+							<span class="l-info">公 司</span> <div class="r-info">深圳市柠檬智慧咨询管理有限公司深圳市柠檬智慧咨询管理有限公司深圳市柠檬智慧咨询管理有限公司深圳市柠檬智慧咨询管理有限公司</div>
 						</div>
 						<div class="chooseplace-otherinfo">
-							<span class="l-info">手机号</span> <span>15013797562</span>
+							<span class="l-info">手 机</span> <span>15013797562</span>
 						</div>
 					</li>
 				</ul>
