--- a/webroot/mobile/html/audio.html
+++ b/webroot/mobile/html/audio.html
@@ -21,7 +21,7 @@
 	<div class="m-audio">
 		<div class="audio stop" onclick="play_music('audioCell', this)">
 		<audio class="myMusic" height='1' width='1' loop="loop">
-			<source src="/upload/news/mp3/2016-08-16/57b2ef22c8be3.mp3" type="audio/ogg">
+			<source src="../mp3/2016-08-16/57b2ef22c8be3.mp3" type="audio/ogg">
 		</audio>
 	</div>
 	</div>
@@ -36,7 +36,7 @@
 	<div class="m-audio">
 		<div class="audio stop" onclick="play_music('audioCell2', this)">
 			<audio class="myMusic" height='1' width='1' preload="auto">
-				<source src="/upload/news/mp3/2016-08-16/57b2ef22c8be3.mp3" type="audio/ogg">
+				<source src="../mp3/2016-08-16/57b2ef22c8be3.mp3" type="audio/ogg">
 			</audio>
 		</div>
 	</div>
