--- a/webroot/mobile/html/cardcase.html
+++ b/webroot/mobile/html/cardcase.html
@@ -43,15 +43,15 @@
 				<div class="innercon">
 					
 						<a href="meet-one.html"><span class="head-img"><img src="../images/vip.png"/><i></i></span></a>
-						<div class="vipinfo lay-c">
-							<a href="meet-one.html" class="fl">
+						<div class="vipinfo">
+							<a href="meet-one.html" class="fl w88">
 								<h3>杨海鼎</h3>
 								<span class="c-info">深圳市时空科技有限公司  市场总监</span>
 								<span class="c-info">13808668528</span>
 								<span class="c-info">skcg@foxmail.com</span> 
 							</a>
 							<div class="fr">
-								<span class="meetnum toc"><i></i>回馈</span>
+								<span class="meetnum toc"><i class="iconfont">&#xe64e;</i>回馈</span>
 							</div>
 						</div>
 					
