--- a/webroot/mobile/html/edit-user-info.html
+++ b/webroot/mobile/html/edit-user-info.html
@@ -28,10 +28,10 @@
 		
 		<div class="wraper m-fixed-bottom newswraper">
 			<div class="h2"></div>
-			<ul class="h-info-box e-info-box">
+			<ul class="h-info-box e-info-box max_width">
 				<li class="u-img no-right-ico">
 					<a href="edit-card.html">
-					<span>头像：</span>
+					<span class="e_img">头像：</span>
 					<div class="upload-user-img">
 						<span class="tx"><img src="../images/touxaing.png"/><input type="file" class="" /></span>
 					
@@ -56,9 +56,9 @@
 			</li>
 			<li class="no-right-ico">
 					<a href="">
-					<span>职务：</span>
-					<div >
-						<input type="text" placeholder="董事长" />
+					<span>部门职务(未完善)：</span>
+					<div class="edit_job">
+						<input type="text" placeholder="请填写部门职务" />
 					</div>
 					</a>
 				</li>
@@ -77,7 +77,7 @@
 					
 				</li>
 			</ul>
-			<ul class="h-info-box e-info-box">
+			<ul class="h-info-box e-info-box max_width">
 				<li class="no-right-ico">
 					<a href="">
 					<span>联系电话：</span>
@@ -96,7 +96,7 @@
 				</li>
 			</ul>
 			
-			<ul class="h-info-box e-info-box">
+			<ul class="h-info-box e-info-box max_width">
 				<li >
 					<a href="">
 					<span>行业：</span>
@@ -133,7 +133,7 @@
 					</a>
 				</li>
 				</ul>
-				<ul class="h-info-box e-info-box">
+				<ul class="h-info-box e-info-box max_width">
 				<li>
 					<a href="edit-education.html">
 					<span>教育经历：</span>
@@ -153,7 +153,7 @@
 					</a>
 				</li>
 				</ul>
-				<ul class="h-info-box e-info-box">
+				<ul class="h-info-box e-info-box max_width">
 				<li>
 					<a href="edit-card.html">
 					<span>我的名片：</span>
