--- a/webroot/mobile/html/meet.html
+++ b/webroot/mobile/html/meet.html
@@ -87,7 +87,7 @@
 				
 			<div class="dk">
 				<div class="m_title_des  bd1">
-					<a class="title" href="#this">为您推荐 <div class="fr more"> 查看更多<i class="iconfont rmore">&#xe667;</i></div></a>
+					<a class="title flex flex_jusitify" href="#this">为您推荐</a>
 				</div>
 				<ul id="items">
 					<li><a href="#this" class="meet-con"><img src="../images/dk.jpg"/><span>8人见过</span></a></li>
@@ -100,7 +100,7 @@
 			</div>
 			<div class="h2"></div>
 				<div class="m_title_des bd1">
-					<h3>全部会员</h3>
+					<a class="title flex flex_jusitify" href="#this"><div>全部会员</div><span class="more">查看更多<i class="iconfont rmore">&#xe667;</i></span></a>
 				</div>
 			<!--修改-->	
 			<section class="internet-v-info">
@@ -130,7 +130,7 @@
 						<div class="vipinfo bd1">
 							<a href="meet-one.html">
 								<h3><div class="l-name">杨海鼎<span class="job">产品经理</span></div><!--<div class="l-place"><i class="iconfont">&#xe660;</i>武汉</div>--><span class="meetnum">22人聊过</span></h3>
-								<span class="job w7 line2">深圳柠檬智慧咨询有限公司</span>
+								<span class="company w7 line2">深圳柠檬智慧咨询有限公司</span>
 							</a>
 								<div class="mark">
 									<a href="#this" class="line1 w7"><i class="iconfont">&#xe67c;</i>演员的自我修养演员的自我修养演员的自我修养演员的自我修养</a>
