--- a/webroot/mobile/html/my- message-system.html
+++ b/webroot/mobile/html/my- message-system.html
@@ -18,7 +18,7 @@
 				<a href='#this' class='toback'></a>
 				<h1 class="m-message-top">
 					
-					<a href="javascript:void(0);">新的关注<i>2</i></a>|
+					<span href="javascript:void(0);">新的关注<i>2</i></span>|
 					<a href="javascript:void(0);"  class="active">系统消息<i>3</i></a>
 				</h1>
 				<a href="javascript:void(0);" class="h-regiser h-add"></a>
