--- a/webroot/mobile/html/my-chat_list.html
+++ b/webroot/mobile/html/my-chat_list.html
@@ -30,7 +30,7 @@
 							</div>
 							<div class='l_text'>
 								<h3 class="title flex"><i>杨俊</i> <span class="job line1">宁和资本 / 投资人</span></h3><span class="company line1">深圳柠檬智慧</span>
-								<span class="cont"><i class='iconfont'>&#xe6aa;</i>好的，星期五下午见</span>
+								<span class="cont line1"><i class='iconfont'>&#xe6aa;</i>好的，星期五下午见好的，星期五下午见好的，星期五下午见好的，星期五下午见好的，星期五下午见</span>
 							</div>
 						</div>
 						<div class="r_info">
