--- a/webroot/mobile/html/my-expert.html
+++ b/webroot/mobile/html/my-expert.html
@@ -34,7 +34,7 @@
 					<a href="#this">确认中</a>
 					<a href="#this">已完成</a>
 				</div>
-			<section class="internet-v-info nopd">
+			<section class="internet-v-info">
 				<div class="innercon">
 					<span class="head-img"><img src="../images/vip.png"/><i></i></span>
 					<div class="vipinfo my-meet-info">
@@ -51,7 +51,10 @@
 						<a class="fr f-btn"><span>完成</span></a>
 					</div>
 				</div>
-			</section>	
+				
+			</section>
+			<div class="h2">
+				</div>
 			<section class="internet-v-info nopd f-complet">
 				<div class="innercon">
 					<span class="head-img"><img src="../images/vip.png"/><i></i></span>
