--- a/webroot/mobile/html/my-install.html
+++ b/webroot/mobile/html/my-install.html
@@ -43,7 +43,7 @@
 					<label for="checkbox" class="label"></label>
 			</div>-->
 			<div class="iscache">
-                <span class="btn" id='checkBtn'><i class="off"></i></span>
+                <span class="btn" id='checkBtn'><i class="on"></i></span>
             </div>
             </a>
         </li>
@@ -59,6 +59,14 @@
         <li class="lh4">
             <a href="javascript:void(0);">
                 <span>给我打分</span>
+                <div>
+                    <span></span>
+                </div>
+            </a>
+        </li>
+         <li class="lh4">
+            <a href="javascript:void(0);">
+                <span>开具发票</span>
                 <div>
                     <span></span>
                 </div>
@@ -91,11 +99,11 @@
 				var flag=1;
 				$('#checkBtn').on('tap',function(){
 					if(flag){
-						$(this).children('i').removeClass().addClass('on');
+						$(this).children('i').removeClass().addClass('off');
 						flag=0;
 						$(this).removeClass().addClass('c-btn');
 					}else{
-						$(this).children('i').removeClass().addClass('off');
+						$(this).children('i').removeClass().addClass('on');
 						$(this).removeClass().addClass('btn');
 						flag=1;
 					}
