--- a/webroot/mobile/html/my-subjectlist.html
+++ b/webroot/mobile/html/my-subjectlist.html
@@ -26,13 +26,12 @@
 			<div class="h2">
 				
 			</div>
-			<div class="a-sj" style="display: block;">
+			<div class="a-sj" style="display: none;">
 				<span><img src="../images/subj.png"/></span>
-				
 				<p>很抱歉，你还未添加话题！</p>
 				<a href="#this" class="nextstep">添加话题</a>
 			</div>
-			<section style="display:none;">
+			<section style="display:block;">
 				<ul class="m-detail-box sub-list">
 					<li>
 						<div class="sub-list-l">
