--- a/webroot/mobile/html/news-search.html
+++ b/webroot/mobile/html/news-search.html
@@ -30,7 +30,7 @@
 				<div class="a-s-title">
 					<span class="orgname">并购沙龙系列</span>
 				</div>
-				<ul	class="a-s-mark">
+				<ul	class="a-s-mark news_s_mark">
 					<li><a href="#this" class="active">并购沙龙系列</a></li>
 					<li><a href="#this">上市公司系列</a></li>
 					<li><a href="#this">菁英下午茶系列</a></li>
