--- a/webroot/mobile/html/register2.html
+++ b/webroot/mobile/html/register2.html
@@ -83,7 +83,7 @@
 					<span class="">请选择地区<a href="javascript:void(0);" onclick=ft(this); class="orgtxt"></a></span>
 				</div>
 				<div class="markslider">
-					<div class="mark-items">
+					<div class="mark-items" id="r_city">
 						<ul	class="b-mark headmark">
 							<li><a href="#this" >北京</a> </li>
 							<li><a href="#this" >上海</a> </li>
@@ -198,6 +198,8 @@
 							<li ><a href="#this">投资机构</a></li>
 							<li ><a href="#this">投资机构</a></li>
 							<li ><a href="#this">实体企业</a></li>
+							<li ><a href="#this">1</a></li>
+							<li ><a href="#this">2</a></li>
 						</ul>
 						<ul class="b-mark cart cart1 mt1" data-id='class1uli2'>
 							<li ><a href="#this" >投资机构</a></li>
