--- a/webroot/mobile/html/train-course-detail.html
+++ b/webroot/mobile/html/train-course-detail.html
@@ -98,7 +98,7 @@
 				document.getElementById("audio").src = url; 
         	}
         </script>
-       <script type="text/javascript">
+       <!--<script type="text/javascript">
         	var oAudio = $('#oaudio');
         	var offsetTop = oAudio.offset().top;
         	$(window).on('scroll',function(){
@@ -110,7 +110,7 @@
         			$(oAudio).removeClass('fixed-audio-box');
         		}
         	})
-        </script>
+        </script>-->
         <script type="text/javascript">
             function fixedSeconds(value) {
                 var hs = '', ms = '', ss = '', n = parseInt(value), h = parseInt(n / 3600), m = parseInt(n / 60) % 60, s = parseInt(n % 60);
