--- a/webroot/mobile/html/train-detail.html
+++ b/webroot/mobile/html/train-detail.html
@@ -52,7 +52,7 @@
 						<li class="items">
 							<a href="#this" class="eleblock">
 							<h3 class="course-title flex flex_jusitify">
-								<div class="eleblock left-info flex box_start"><i class="serial ">01</i><div>并购中对目标公司有哪些并购中对目标公司有哪些好的评估方法方法方好的评估方法 <i class='durationtime'>(20分钟)</i> <i class="color-items" style="display: inline-block;padding:.02rem .1rem;border:1px #B71C2D solid;border-radius: 4px;">试听</i></div></div>
+								<div class="eleblock left-info flex box_start"><i class="serial ">01</i><div>并购中对目标公司有哪些并购中对目标公司有哪些好的评估方法方法方好的评估方法 <i class='durationtime'>(20分钟)</i> <i class="color-items free-course">试听</i></div></div>
 								<div class="iconfont r-ico">&#xe667;</div>
 							</h3>
 							<div class="couser-pro flex">
