--- a/webroot/mobile/html/train.html
+++ b/webroot/mobile/html/train.html
@@ -227,7 +227,7 @@
 				<a href="meet.html"><span class="iconfont">&#xe6a0;</span>约见</a>
 			</li>
 			<li class="active">
-				<a href="train.html"><span class="iconfont">&#xe6ac;</span>培训</a>
+				<a href="train.html"><span class="iconfont">&#xe6bb;</span>培训</a>
 			</li>
 			<li >
 				<a href="activity.html"><span class="iconfont">&#xe69d;</span>活动</a>
