--- a/webroot/mobile/html/activity-details.html
+++ b/webroot/mobile/html/activity-details.html
@@ -24,6 +24,17 @@
 		<div class="wraper pd10" style="display: block;">
 			<section class="newscon-box a-detail">
 				<h3>2016中国国际体育投融资总裁年会</h3>
+				<div class="active-autor flex">
+					<div class="avatar">
+						<img src="../images/home-pic.png" class="responseimg"/>
+					</div>
+					<div class="active-r-info">
+						<span class="user">陆涛</span> | <span class="company">并购中对目标公司有哪些并购</span> | <span class="job">并购中</span>
+					</div>
+				</div>
+				<div class="inner">
+					<time class="a_title_time">2016-09-23 17:50:26</time>
+				</div>
 				<img src="../images/detail.png"/>
 				<p>主办单位：并购精英汇
 				<br />时间：2016年4月28日 - 2016年4月30日
